--- a/style1.css
+++ b/style1.css
@@ -11,13 +11,13 @@
     }
     .one{
         position: fixed;
-        top:18rem;
-        left:9rem;
+        top:15rem;
+        left:5rem;
         font-size: 30px;
         font-style: italic;
         text-align: center;
     }
-    .two{
+    /* .two{
         position: fixed;
         top:23rem;
         right:7rem;
@@ -49,5 +49,5 @@
         color:darkgoldenrod;
         
     }
-    
+     */
     }
